# zeus

./: Cargo.toml  Justfile  LICENSE  README.md  justfile  sonar-project.properties
.github/workflows/: build.yaml  clippy.yaml  code-quality.yaml
client/: Cargo.toml
client/src/: main.rs
client/src/core/: buffer.rs  handler.rs  init.rs  key_mapper.rs  main_loop.rs  mod.rs  socket.rs  term_state.rs
client/src/core/command/: ack_pty.rs  context.rs  handler.rs  mod.rs
client/src/platform/: unix_signals.rs
client/src/utils/: buffer.rs  comm.rs  connection.rs  mod.rs  stack.rs
common/: Cargo.toml
common/src/: constants.rs  err.rs  forwarder.rs  lib.rs  macros.rs  strings.rs
common/src/commands/: helios.rs  hermes.rs  mod.rs  traits.rs  zeus.rs
common/src/protocol/: base_handler.rs  commands.rs  master.rs  message.rs  mod.rs  utils.rs  zeus.rs
common/src/serde/: serialize.rs
docs/: README.md
docs/protocol/: README.md
docs/zeus/: README.md
helios/: Cargo.toml
hermes/: Cargo.toml
hermes/src/: main.rs
hermes/src/core/: buffer.rs  constants.rs  err.rs  init.rs  io.rs  key_mapper.rs  main_loop.rs  master_cmd.rs  mod.rs  socket.rs
hermes/src/platform/: unix_signals.rs
hermes/src/utils/: buffer.rs  mod.rs  stack.rs  term.rs
master/: Cargo.toml
master/src/: main.rs
master/src/core/: mod.rs
master/src/core/service/: completion_engine.rs  conn_handler.rs  request_handler.rs  shell.rs
master/src/core/service/v2/: context.rs  handler.rs  mod.rs
master/src/core/service/v2/command/: forward.rs  init.rs  mod.rs  z_fork.rs
master/src/core/utils/: shell.rs
tools/: CMakeLists.txt  README.md
tools/src/main/: raw_pty_opener.c
zeus/: Cargo.toml
zeus/src/: main.rs
zeus/src/core/: mod.rs
zeus/src/core/constants/: byte.rs  sock.rs
zeus/src/core/service/: completion_engine.rs  conn_handler.rs  request_handler.rs  shell.rs  shell_fork_handler.rs  shellmanager.rs  ttymanager.rs
zeus/src/core/utils/: shell.rs  shell_test.rs  socket.rs
