[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix = { version = "0.29.0", features = ["term", "fs", "ioctl"] }
paste = "1.0.15"
common = { path = "../common", feature = ["client"] }
tokio = { version =  "1.39.2", features=["rt", "full"] }
simple_logger = "5.0.0"
postcard = "1.1.1"
inotify = "0.11.0"
