[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default=[]
master=[]
client=[]

[dependencies]
log = "0.4.22"
nix = { version = "0.29.0", features = ["fs", "poll", "term"] }
paste = "1.0.15"
postcard = "1.1.1"
serde = { version = "1.0.217", features = [ "derive" ] }
tokio = { version =  "1.39.2", features=["rt", "full"] }
