[package]
name = "hermes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix = { version = "0.29.0", features = ["term", "fs", "ioctl"] }
paste = "1.0.15"
tokio = { version = "1.39.2", features = ["full", "rt"] }
common = { path = "../common" }
simple_logger = "5.0.0"
