[package]
name = "zeus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.22"
nix = { version = "0.29.0", features=["term", "process", "user"]}
simple_logger = "5.0.0"
tokio = { version =  "1.39.2", features=["rt", "full"] }
common = { path = "../common" }
